samples/_failures_safe/1761129869_822ddd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d4f8862.c:165:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  165 | void graph_bfs
      | ^~~~
